--- a/styles.css
+++ b/styles.css
@@ -82,3 +82,18 @@ p .subtext {
   border: 2px solid whitesmoke;
   border-radius: 12px;
 }
+
+.content {
+}
+
+.images {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.images img {
+  width: 150px;
+  border: 2px solid rgb(69, 84, 227);
+  border-radius: 12px;
+}
